esp_OTA_SMT32/build/log/idf_py_stdout_output_12640
[1/14] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\esp_OTA_SMT32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/esp_OTA_SMT32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/12] Building C object esp-idf/processing_HEX/CMakeFiles/__idf_processing_HEX.dir/processing_data_of_file_hex.c.obj
FAILED: esp-idf/processing_HEX/CMakeFiles/__idf_processing_HEX.dir/processing_data_of_file_hex.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/esp_OTA_SMT32/build/config -ID:/esp/esp_OTA_SMT32/component/processing_HEX -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fmax-include-depth=500 -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/esp_OTA_SMT32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/processing_HEX/CMakeFiles/__idf_processing_HEX.dir/processing_data_of_file_hex.c.obj -MF esp-idf\processing_HEX\CMakeFiles\__idf_processing_HEX.dir\processing_data_of_file_hex.c.obj.d -o esp-idf/processing_HEX/CMakeFiles/__idf_processing_HEX.dir/processing_data_of_file_hex.c.obj -c D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c: In function 'array2D_save_data_convert_file_hex':
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:5:37: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
    5 | static uint8_t char_to_byte(char c) {
      |                                     ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:12:54: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   12 | static uint8_t check_sum(uint8_t* buff, uint8_t len) {
      |                                                      ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:23:66: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   23 | static void convert_string_to_byte(char* input, uint8_t* output) {
      |                                                                  ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:35:42: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   35 | static void swap(uint8_t* a, uint8_t* b) {
      |                                          ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:41:53: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   41 | static void swap_4_byte(uint8_t* data, uint8_t len) {
      |                                                     ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:48:90: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   48 | void array2D_save_data_convert_file_hex(char* file_hex, uint8_t array2D_Save_Data[][21]) {
      |                                                                                          ^
D:/esp/esp_OTA_SMT32/component/processing_HEX/processing_data_of_file_hex.c:64: error: expected '{' at end of input
[3/12] Building C object esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj
[4/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_OTA_SMT32.c.obj
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c: In function 'app_main':
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c:47:18: warning: passing argument 1 of 'otaStart' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   47 |         otaStart(file_hex,&flag_test);
      |                  ^~~~~~~~
In file included from D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c:3:
D:/esp/esp_OTA_SMT32/component/HostOTA_ESP32/OTAHost_esp32.h:70:21: note: expected 'char *' but argument is of type 'const char *'
   70 | void otaStart(char *file_hex,bool *status_kick_off);
      |               ~~~~~~^~~~~~~~
ninja: build stopped: subcommand failed.
